[package]
name = "soroban-env-guest"
description = "Soroban contract guest environment."
homepage = "https://github.com/diamcircle/rs-soroban-env"
repository = "https://github.com/diamcircle/rs-soroban-env"
authors = ["Diamnet Development Foundation <info@diamnet.org>"]
license = "Apache-2.0"
version.workspace = true
readme = "../README.md"
edition = "2021"
rust-version.workspace = true

[dependencies]
soroban-env-common = { workspace = true, features = [] }
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true

[features]
testutils = ["soroban-env-common/testutils"]
next = ["soroban-env-common/next"]
